@@ -29,10 +29,19 @@
     (lambda (port)
       (reader-extension-inline-code #\# port))))
 
-(test-equal "reader supports string interpolation"
+;; This is what snippet-caller does internally.
+(define (code-as-string code)
+  (string-join (map (lambda (val)
+                      (if (list? val)
+                          (format #f "~{~a~^ ~}" val)
+                          (format #f "~a" val)))
+                    code)
+               ""))
+
+(test-equal "reader supports embedding variables"
   '(code-snippet (quote foo)
                  (quote ("bar" "baz"))
-                 (list " print(\"hello " world "\") "))
+                 `(" print(\"hello " ,world "\") "))
   (convert "foo bar baz { print(\"hello {{world}}\") }"))
 
 (test-assert "reader ignores leading spaces"
@@ -41,15 +50,17 @@
          (equal? (code-snippet-language snippet) '/bin/bash))))
 
 (define some-list '("Bender" "Leela" "Fry"))
-(test-equal "reader supports string interpolation of lists"
+(test-equal "reader supports embedding of lists"
   "echo Bender Leela Fry are great"
-  (code-snippet-code
-   (test-read-eval-string "# /bin/bash -c {echo {{some-list}} are great}")))
+  (code-as-string
+   (code-snippet-code
+    (test-read-eval-string "# /bin/bash -c {echo {{some-list}} are great}"))))
 
 (test-equal "reader will not interpolate values with spaces"
   "print(\"hello {{not a variable}}\")"
-  (code-snippet-code
-   (test-read-eval-string "# foo bar baz {print(\"hello {{not a variable}}\")}")))
+  (code-as-string
+   (code-snippet-code
+    (test-read-eval-string "# foo bar baz {print(\"hello {{not a variable}}\")}"))))
 
 (test-equal "reader complains about unbalanced curlies"
   '(3)
@@ -68,27 +79,57 @@
     (and (eq? 'sh (code-snippet-language snippet))
          (null? (code-snippet-arguments snippet)))))
 
-(define name "Bender")
+(define who "Bender")
 (test-equal "string interpolation works"
   "echo Bender is great"
-  (code-snippet-code
-   (test-read-eval-string "# /bin/bash -c {echo {{name}} is great}")))
+  (code-as-string
+   (code-snippet-code
+    (test-read-eval-string "# /bin/bash -c {echo {{who}} is great}"))))
 (test-equal "string interpolation does not kill bash variable access"
-  "echo ${name} is great"
-  (code-snippet-code
-   (test-read-eval-string "# /bin/bash -c {echo ${name} is great}")))
+  "echo ${who} is great"
+  (code-as-string
+   (code-snippet-code
+    (test-read-eval-string "# /bin/bash -c {echo ${who} is great}"))))
 
 (define numbers
   (list 100 200 #:my-number 300 400 500 #:boring 1000))
-(test-equal "string interpolation can access named items in lists"
-  "echo my number is 300, not 1000"
+(test-equal "placeholders can refer to named items in lists"
+  '("echo my number is " 300 ", not " 1000 "")
   (code-snippet-code
    (test-read-eval-string "# /bin/bash -c {echo my number is {{numbers:my-number}}, not {{numbers:boring}}}")))
 
-(test-equal "string interpolation can access tagged consecutive items in lists"
-  "echo my numbers are 300 400 500, not 1000"
+(test-equal "placeholders can refer to tagged consecutive items in lists"
+  '("echo my numbers are " (300 400 500) ", not " 1000 "")
   (code-snippet-code
    (test-read-eval-string "# /bin/bash -c {echo my numbers are {{numbers::my-number}}, not {{numbers:boring}}}")))
+
+(test-equal "references to process arguments are delayed"
+  '("echo " (assoc-ref #{ %gwl process-arguments}# 'inputs) "")
+  (code-snippet-code
+   (test-read-eval-string "# {echo {{inputs}}}")))
+
+(let ((#{ %gwl process-arguments}#
+       '((inputs . (#:first "1st" #:second "2nd" #:rest "who" "cares"))
+         (outputs . ("just this one"))
+         (name . "test-process"))))
+  (test-equal "references to elements of process arguments are delayed"
+    '("echo "
+      (and=> (memq #:first
+                   (assoc-ref #{ %gwl process-arguments}# (quote inputs)))
+             cadr)
+      " "
+      (assoc-ref #{ %gwl process-arguments}# (quote inputs))
+      " "
+      (assoc-ref #{ %gwl process-arguments}# (quote outputs))
+      " "
+      (assoc-ref #{ %gwl process-arguments}# (quote name))
+      "")
+    (code-snippet-code
+     (test-read-eval-string "# {echo {{inputs:first}} {{inputs}} {{outputs}} {{name}}}")))
+  (test-equal "references to elements of other variables are not delayed"
+    '("echo " 1000 " " "Bender" "")
+    (code-snippet-code
+     (test-read-eval-string "# {echo {{numbers:boring}} {{who}}}"))))
 
 (test-assert "make-process macro allows key-less procedure"
   (let ((proc (make-process
